fix(wizard): align stepnav hover, active, and selected states

--- a/projects/angular/src/wizard/_properties.wizard.scss
+++ b/projects/angular/src/wizard/_properties.wizard.scss
@@ -21,10 +21,14 @@
       --clr-wizard-main-text-color: #{tokens.$cds-alias-typography-color-400};
 
       --clr-wizard-stepnav-bgcolor: #{tokens.$cds-alias-object-interaction-background};
-      --clr-wizard-stepnav-text: #{tokens.$cds-alias-typography-color-400};
+      --clr-wizard-stepnav-text: #{tokens.$cds-alias-object-interaction-color};
+      --clr-wizard-stepnav-text-active: #{tokens.$cds-alias-object-interaction-color-active};
+      --clr-wizard-stepnav-text-hover: #{tokens.$cds-alias-object-interaction-color-hover};
+      // @TODO v18 rename to --clr-wizard-stepnav-text-selected
       --clr-wizard-stepnav-text--active: #{tokens.$cds-alias-object-interaction-color-selected};
       --clr-wizard-stepnav-item-border-color: #{tokens.$cds-alias-status-neutral-tint};
       --clr-wizard-stepnav-border-size: #{tokens.$cds-global-space-3};
+      // @TODO v18 rename to --clr-wizard-stepnav-item-complete-border-color
       --clr-wizard-stepnav-item-border-color--active: #{tokens.$cds-alias-status-success};
       // @TODO v18 remove in favor of --clr-wizard-stepnav-selected-bgcolor
       --clr-wizard-stepnav-active-bgcolor: #{tokens.$cds-alias-object-interaction-background-selected};
@@ -35,7 +39,9 @@
       --clr-wizard-stepnav-link-complete-icon-color: #{tokens.$cds-alias-status-success};
 
       --clr-wizard-stepnav-border-color: #{tokens.$cds-alias-object-container-border-color};
+      // @TODO v18 rename to --clr-wizard-stepnav-hover-bgcolor
       --clr-wizard-stepnav-link-hover-bg-color: #{tokens.$cds-alias-object-interaction-background-hover};
+      // @TODO v18 rename to --clr-wizard-stepnav-active-bgcolor
       --clr-wizard-stepnav-link-active-bg-color: #{tokens.$cds-alias-object-interaction-background-active};
       --clr-wizard-stepnav-link-padding: calc(#{tokens.$cds-global-space-5} - #{tokens.$cds-global-space-1});
       --clr-wizard-stepnav-item-error-border-color: #{tokens.$cds-alias-status-danger};
