--- a/projects/angular/src/wizard/_variables.wizard.scss
+++ b/projects/angular/src/wizard/_variables.wizard.scss
@@ -15,6 +15,8 @@ $clr-wizard-main-text-color: var(--clr-wizard-main-text-color) !default;
 
 $clr-wizard-stepnav-bgcolor: var(--clr-wizard-stepnav-bgcolor) !default;
 $clr-wizard-stepnav-text: var(--clr-wizard-stepnav-text) !default;
+$clr-wizard-stepnav-text-active: var(--clr-wizard-stepnav-text-active) !default;
+$clr-wizard-stepnav-text-hover: var(--clr-wizard-stepnav-text-hover) !default;
 $clr-wizard-stepnav-text--active: var(--clr-wizard-stepnav-text--active) !default;
 $clr-wizard-stepnav-border-color: var(--clr-wizard-stepnav-border-color) !default;
 $clr-wizard-stepnav-border-size: var(--clr-wizard-stepnav-border-size) !default;
